# internal/api/external/resources/converter_gen.go
@@ -104,7 +104,6 @@ func (c *ConverterImpl) SegmentToResource(source *ent.Segment) external.SegmentR
 	var externalapiSegmentResource external.SegmentResource
 	if source != nil {
 		externalapiSegmentResource.Name = (*source).Name
-		externalapiSegmentResource.Type = external.SegmentType((*source).Type)
 		externalapiSegmentResource.Definition = optString((*source).Definition)
 		externalapiSegmentResource.ID = entityID((*source).ID)
 		externalapiSegmentResource.CreatedAt = timestamp((*source).CreatedAt)
